--- a/styles.css
+++ b/styles.css
@@ -17,37 +17,50 @@ h4{
 h5 {
     color:deeppink
 }
-
 h6{
     color:indianred
 }
 
-header{
-    display: inline-block;
-    font-size: 16px; 
-    vertical-align: middle;
-    height: 100%;
-    line-height: 45px;
+.header { 
+    margin-top: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: 0;
+    height: 45px;
 }
+.header > *{
+    display: inline-block;
+    height: 100%;
+    font-size: 16px;
+    line-height: 45px;
+    height:100%; 
+    vertical-align: middle;
+    font-style: sans-serif;
 
+}
 .navbar{
     width: 70%;
     text-align: center;
-    color:#025157;
-    line-height: 45px;
-    font: sans-serif;
+    color: #025157;
+    font-weight: 500;
+    margin-left: 25px;
+    margin-right: 25px;
 }
 
 .actions {
     width: 15%;
     text-align: right;
     font-size: 14px;
+    font-weight: 600;
+    margin: 0 , 10px , 0 , 10px;
     color: #67b54b;
+
     
 }
 
-.signbutton {
-    color: blanchedalmond;
-    background-color: #67b54b;
-
+.logo > img{
+    height: 100%;
 }
+
+
+
